--- a/Week3.html
+++ b/Week3.html
@@ -8,10 +8,10 @@
 <body>
 	<div id="navigation">
 		<h2>Attendance Sheet</h2>
-		<a href="Attendance.html"><img src="week1.jpg"></a>
-		<a href="Week2.html"><img src="week2.jpg"></a>
-		<a href="Week3.html"><img src="week3.jpg"></a>
-		<a href="Week4.html"><img src="week4.jpg"></a>
+		<a href="Attendance.html"><img src="week1.JPG"></a>
+		<a href="Week2.html"><img src="week2.JPG"></a>
+		<a href="Week3.html"><img src="week3.JPG"></a>
+		<a href="Week4.html"><img src="week4.JPG"></a>
 	</div>
 	<table id="tablesectionOne">
 		<tr><caption class="CAPTION">Week 3</caption></tr>
