--- a/test.html
+++ b/test.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Vincent State School</title>
+	<title>Email</title>
 	<meta charset="utf-8">
-	<style type="text/css">
-		.heading1{
-			font-family: arial,helvetica,sans-serif;
-			color: #6297BC;
-		}
-		.heading2 {
-		color: #666666;
-		font-weight: bold;
-		font-family: tahoma;
-		font-size: 12px;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<img src="photos/schoollogo.png" align="left">
-<h1 class="heading1"><center>Vincent State School</center></h1>
-<h2 class="heading2"><center>280 Palmerston Street, Townsville, 4814</center></h2>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<a href="">Home</a>
-<a href="">Information Course</a>
-<a href="">Fee Structure</a>
-<a href="">Admission Process</a>
-<h3><b>Welcome to Vincent State School</b></h3><br>
-<b>Welcome to Vincent State School</b>
-<p>Our purpose in the community is to provide high quality learning oppoturnities for every student. We aim to prom and maintain a positive, safe and orderly learning environment for all students and staff</p>
-<b>We plan to do this though:</b>
-<ul>
-	<li>The delivery of high quality curriculum</li>
-	<li>Excellence in teaching and learning</li>
-	<li>Recognising diversity</li>
-	<li>School Home/ Community Partnerships</li>
-	<li>Valuing Positive Behavior</li>
-</ul>
-This information guide is an introduction to what we hope will be a very happy association for you with Vincent State School.
-
+<button class="=imgHelp">Help</button>
+<div id="main">
+	<h2>Compose e-mail message</h2>
+	<div class="row">
+		<div class="col-md-4">To:</div>
+		<div class="col-md-8"><input type="text" class="EmailEditor"name="to"></div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">From:</div>
+		<div class="col-md-8"><input type="text"class="EmailEditor" name="to"></div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">Cc:</div>
+		<div class="col-md-8"><input type="text"class="EmailEditor" name="to"></div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">Subject:</div>
+		<div class="col-md-8"><input type="text"class="EmailEditor" name="to"></div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">Message:</div>
+		<div class="col-md-8">
+			<textarea rows ="5"class="EmailEditor"></textarea></div>
+	</div>
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-8">
+			<button>Send</button>
+		<button>Cancel</button>
+	</div>
+		
+</div>
+<div id="help">
+	<h2>-:E-mail Editor Help :-</h2>
+	<ul>
+		<li><b>To and Cc:</b><br/>
+		To and Cc boxes allow you to enter the e-mail addresses of the recepients to whom to message has to be sent.</li>
+		<li><b>Subject</b></li>
+		<li><b>Subject</b></li>
+	</ul>
+	<div class = "Close">Close</div>
 </body>
 </html>
