--- a/EmailEditor.html
+++ b/EmailEditor.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="email.css">
 </head>
 <body>
-	<img src="help.jpg" class="imgHelp" onclick="clickHelp()">
+	<img src="Help.jpg" class="imgHelp" onclick="clickHelp()">
 	<div id="main">
 		<h2></style>Compose e-mail message.</h2>
 		<table>
