--- a/EmailEditor.html
+++ b/EmailEditor.html
@@ -50,13 +50,13 @@
 	</div>
 	<script>
 	function clickHelp() {
-		document.getElementById("help").style.display = "none";
-		document.getElementById("main").style.display = "block";
+		document.getElementById("help").style.display = 'block';
+		document.getElementById("main").style.display = 'none;
 	}
 
 	function closeHelp() {
-		document.getElementById("help").style.display = "none";
-		document.getElementById("main").style.display = "block";
+		document.getElementById("help").style.display = 'none';
+		document.getElementById("main").style.display = 'block';
 	}
 	</script>
 </body>
