--- a/easyjob.html
+++ b/easyjob.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Registration Form - Job Seekers</h1>
-	<form><table>
+	<form action="thankyou.html" method="post"><table>
 		<tr>
 			<td><label>Login Name:</label></td>
 			<td><input type="text" name="Name" style="width: 250px"></td>
@@ -40,7 +40,7 @@
 		</tr>
 		<tr>
 			<td>
-			<button><a href="thankyou.html">Register</a></button>
+			<input type="submit" value="Register">
 			<input type="reset" value="Cancel">	
 			</td>
 		</tr>
