--- a/khotruyen.html
+++ b/khotruyen.html
@@ -457,7 +457,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<p style="color:#ebebeb ">s</p>
+			<p style="color:#ebebeb ">ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</p>
 		</div>
 	</div>
 	<div class="footer">
