--- a/giai_thua.html
+++ b/giai_thua.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var n = prompt('Mời bạn nhập giá trị n', 0);
+		var n = prompt('Moi ban nhap N', 0);
 		S = 1;
 		for (var i = 1; i <= n; i++) {
 			S *= [i];
