--- a/pt_bac2.html
+++ b/pt_bac2.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var a = prompt('Mời bạn nhập giá trị a', 0);
+		var a = prompt('Moi ban nhap gia tri a', 0);
 		if (a == 0){
-			alert('Mời bạn nhập a khác 0');
-			var a = prompt('Mời bạn nhập giá trị a', 0);
+			alert('Moi ban nhap a khac 0');
+			var a = prompt('Moi ban nhap gia tri a', 0);
 		}		
-		var b = prompt('Mời bạn nhập giá trị b', 0);
-		var c = prompt('Mời bạn nhập giá trị c', 0);
+		var b = prompt('Moi ban nhap gia tri b', 0);
+		var c = prompt('Moi ban nhap gia tri c', 0);
 		d = (b * b ) - ( 4 * a * c );
 		e = Math.sqrt(d);
 		if (d < 0){
