--- a/pt_bac1.html
+++ b/pt_bac1.html
@@ -5,12 +5,12 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var a = prompt('Mời bạn nhập giá trị a', 0);
+		var a = prompt('Moi ban nhap gia tri a', 0);
 		if (a == 0){
-			alert('Mời bạn nhập a khác 0');
-			var a = prompt('Mời bạn nhập giá trị a', 0);
+			alert('Moi ban nhap a khac 0');
+			var a = prompt('Moi ban nhap gia tri a', 0);
 		}	
-		var b = prompt('Mời bạn nhập giá trị b', 0);
+		var b = prompt('Moi ban nhap gia tri b', 0);
 		x = (-b) / a;
 		document.write('x = ')
 		document.write(x)
