--- a/in_tam_giac.html
+++ b/in_tam_giac.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var n = prompt('Mời bạn nhập giá trị n', 0);
+		var n = prompt('Moi ban nhap gia tri n', 0);
 			for (var i = 1; i <= n; i++) {
 				for (var j = 1; j <= i ; j++) {
 					document.write('* ');
