--- a/bitdefender.html
+++ b/bitdefender.html
@@ -192,7 +192,7 @@
             </div>
         </div>
         <div class="box5">
-            <p style="color: gray; font-family: 'roboto',sans-serif;margin-top: 20px;font-size: 13px">COMPARE SOLUTIONS<br><br><span style="color: #002975;font-size: 30px;font-family: 'roboto',sans-serif;font-weight: 500;">Compare Bitdefender Products threats</span></p>
+            <p style="color: gray; font-family: 'roboto',sans-serif;margin-top: 20px;font-size: 13px">COMPARE SOLUTIONS<br><br><span style="color: #002975;font-size: 30px;font-family: 'roboto',sans-serif;font-weight: 500;">Compare Bitdefender Products</span></p>
             <p style="color: gray; font-family: 'roboto',sans-serif;font-weight: 400">Compare our award-winning<br> products and get the best real-<br>world protection, so you can<br> keep doing the things that<br> matter while we handle security.</p>
         </div>
     </main>
