--- a/bai1.html
+++ b/bai1.html
@@ -1,15 +1,119 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UNESCO</title>
+	<title>sdfjklh</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
-	<hr>
-		<h2 title="United Nations Educational, Scientific and Cultural Organization">UNESCO</h2>
-	<hr>
-	 <b>UNESCO</b> <i><b>United Nations Educational, Scientific and Cultural Organization</b></i> is a <br>
-	 specialized agency of the United Nations established in 1945. Its purpose is provide peace and <br>
-	 security by promoting international collaboration.<br><br>
-	 <big>Locations:</big> <small>Headquarter of UNESCO is located in Paris, France.</small>
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<ul class="navbar-nav">
+		    <li class="nav-item">
+		      <a class="nav-link" href="#">GokiSoft</a>
+		    </li>
+		    <li class="nav-item">
+		      <a class="nav-link" href="#">Trang Chu</a>
+		    </li>
+		    <li class="nav-item dropdown">
+		      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+		        DS Khoa Hoc
+		      </a>
+		      <div class="dropdown-menu">
+		        <a class="dropdown-item" href="#">Khoa hoc 1</a>
+		        <a class="dropdown-item" href="#">Khoa hoc 2</a>
+		        <a class="dropdown-item" href="#">Khoa hoc 3</a>
+		      </div>
+		    </li>
+		    <li class="nav-item active">
+		      <a class="nav-link" href="#">Goc Lap Trinh</a>
+		    </li>
+		    <div class="nav-item" style="margin-left: 700px; display: flex;">
+		      <a class="nav-link" href="#"><i class='fas fa-user-alt'></i> Dang Ky</a>
+		      <a class="nav-link" href="#"><i class='fas fa-sign-in-alt'></i> Dang Nhap</a>
+		    </div>
+		</ul>
+	</nav>
+	<div class="container" style="margin-top: 30px;">
+		<div class="card">
+		<div class="card-header bg-primary" style="color: white">Quan ly thong tin sinh vien</div>
+		<div class="card-body">
+		<table class="table table-bordered table-hover" cellspacing="2px" >
+			<thead>
+				<tr>
+					<th>No</th>
+					<th>Fullname</th>
+					<th>Age</th>
+					<th>Email</th>
+					<th>Phone Number</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>Tran Van Diep</td>
+					<td>18</td>
+					<td>tranvandiep.it@gmail.com</td>
+					<td>1234567898</td>
+				</tr>
+				<tr>
+				<tr>
+					<td>2</td>
+					<td>Tran Van Diep</td>
+					<td>19</td>
+					<td>tranvandiep.it@gmail.com</td>
+					<td>1234567898</td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td>Tran Van Diep</td>
+					<td>20</td>
+					<td>tranvandiep.it@gmail.com</td>
+					<td>1234567898</td>
+				</tr>
+				<tr>					<td>4</td>
+					<td>Tran Van Diep</td>
+					<td>21</td>
+					<td>tranvandiep.it@gmail.com</td>
+					<td>1234567898</td>
+				</tr>
+				<tr>
+					<td>5</td>
+					<td>Tran Van Diep</td>
+					<td>22</td>
+					<td>tranvandiep.it@gmail.com</td>
+					<td>1234567898</td>
+				</tr>
+				<tr>
+					<td>6</td>
+					<td>Tran Van Diep</td>
+					<td>23</td>
+					<td>tranvandiep.it@gmail.com</td>
+					<td>1234567898</td>
+				</tr>
+				<tr>
+					<td>7</td>
+					<td>Tran Van Diep</td>
+					<td>24</td>
+					<td>tranvandiep.it@gmail.com</td>
+					<td>1234567898</td>
+				</tr>
+				<tr>
+					<td>8</td>
+					<td>Tran Van Diep</td>
+					<td>25</td>
+					<td>tranvandiep.it@gmail.com</td>
+					<td>1234567898</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	</div>
+		<div class="card bg-primary" style="margin-top: 30px; text-align: center; color: white;	">100%</div>
+	</div>
 </body>
 </html>
